# pm

./: .env.example  .gitignore  README.md  activate_olps.sh  dashboard_enhanced.py  debug_output.txt  pyproject.toml  test_skfolio_adapter.py  test_strategies.py  test_yf.py  update_log.txt  update_log_crypto.txt
.github/: copilot-instructions.md
.streamlit/: config.toml
backend/: __init__.py  costs.py
dashboard/: Home.py
data/: README.md  isin_ticker_mapping_verified.json
db_scripts/: 00_init_schema.sql  01_add_avatars.sql  02_add_updated_at.sql  03_preferences_billing.sql  04_add_email_to_profiles.sql  05_create_assets_table.sql
docs/: supabase_smtp_setup.md
documents/: README.md  architecture_design.md  dct.md  etf_universe_full_clean.csv  etf_universe_with_tickers.csv  multi_asset_table.md  waeg.md
frontend/: package-lock.json  package.json
scripts/: __init__.py  convert_multi_asset_table.py  debug_api.py  download_data.py  ingest_binance.py  ingest_data.py  install.sh  populate_db.py  resolve_isins_openfigi.py  test_coingecko.py  update_market_data.py  verify_data_logistics.py
tests/: reproduce_index_error.py  reproduce_nan_strategies.py  test_categories.py  test_dtc.py  test_skfolio_adapter.py  test_strategies.py
work-documentation/: 2025-01-16_cwmr-rmr-implementation.md  2025-01-16_streamlit-dashboard-enhanced.md  2025-01-17_batch2-corn-ftl-implementation.md  2025-01-17_codebase-cleanup.md  2025-01-17_strategy-summary.md  2025-01-17_transaction-costs-and-data-alignment.md  2025-11-16_backend-architecture-data-pipeline.md  README.md  (+8 more)
(+57 files in other folders)
